--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
           uses: docker/build-push-action@v2 # Выполняет push образа в DockerHub 
           with:
             push: true
-            tags: ${{ secrets.DOCKER_USERNAME }}/infra:latest
+            tags: gerartg/infra:latest
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
@@ -62,7 +62,7 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         script: |
           # Выполняет pull образа с DockerHub
-          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/infra
+          sudo docker pull gerartg/infra
           #остановка всех контейнеров
           sudo docker stop $(sudo docker ps -a -q)
-          sudo docker run --rm -d -p 5000:5000 ${{ secrets.DOCKER_USERNAME }}/infra
+          sudo docker run --rm -d -p 5000:5000 gerartg/infra
